[package]
name = "tree-sitter-mm"
description = "mm grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "mm"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ali7line/tree-sitter-mm"
edition = "2023"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19.3"

[build-dependencies]
cc = "1.0"
